--- a/_prerequisites.Rmd
+++ b/_prerequisites.Rmd
@@ -1,1 +1,1 @@
-This course requires prior exposure to probability theory, multi-variable calculus, linear algebra, and regression. Each of these concepts will be applied throughout the course, and no time will be spent reviewing the foundational elements of each concept. To self-assess familiarity with these concepts, students can complete [Assignment 0](a0-course-prereqs.html) prior to registering for the course. In addition, we will work in the R programming language throughout the course, but no prior programming experience is required. We will spend the first two weeks going through exercises to get up to speed in R.
+This course requires prior exposure to probability theory, multivariable calculus, linear algebra, and regression. Each of these concepts will be applied throughout the course, and no time will be spent reviewing the foundational elements of each concept. To self-assess familiarity with these concepts, students can complete [Assignment 0](a0-self-assessment.html) prior to registering for the course. In addition, we will work in the R programming language throughout the course, but no prior programming experience is required. We will spend the first two weeks going through exercises to get up to speed in R.
