--- a/_description.Rmd
+++ b/_description.Rmd
@@ -1,1 +1,1 @@
-This course provides students with data analysis techniques to inform design decisions in an uncertain, competitive market. Over the course of the semester, students will learn and apply theory and methods to a team project to assess the market competitiveness of an emerging product / technology and use marketing analytics to generate design insights. This course has a "flipped" classroom structure. Students will spend the majority of class time working through guiding practice exercises or working on their projects. To prepare for class, students must complete "Pre-Class Assignments" (PCAs), which involve watching and reviewing recorded lecture materials and answering related practice questions. At the start of each class, we will review the PCA and go through the solutions to the practice questions. Students will complete a self-assessment of their answers. Working through the PCAs on schedule and participating in the self-assessments will be crucial to success in the course.
+This course provides students with data analysis techniques to inform design decisions in an uncertain, competitive market; topics include consumer choice modeling, programming in the [R programming language](https://www.r-project.org/), survey design, conjoint analysis, optimization, market simulation, and professional communication skills. Over the course of the semester, students will learn and apply theory and methods to a team project to assess the market competitiveness of an emerging product / technology and use marketing analytics to generate design insights. At the end of the semester, students will submit a final, reproducible report of their project along with a 10-minute presentation of their findings. This course has a "flipped" classroom structure. Students will spend the majority of class time working through guiding practice exercises or working on their projects. To prepare for class, students must complete weekly assignments that involve watching and reviewing recorded lecture materials and answering related practice questions.
