--- a/ref-getting-help.Rmd
+++ b/ref-getting-help.Rmd
@@ -3,14 +3,12 @@ title: "Getting Help"
 output: html_document
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-rm(list=objects()) # start with a clean workspace
-source("knitr_setup.R")
+```{r child = "knitr_setup.Rmd"}
 ```
 
 # Slack
 
-All course communication will be managed through [Slack](https://emse-eda-s20.slack.com). A link to sign up for the course slack page can be found on the one (and only) announcement on Blackboard.
+All course communication will be managed through [Slack](https://emse-madd-f21.slack.com). A link to sign up for the course slack page can be found on the one (and only) announcement on Blackboard.
 
 Watch this 2-minute video to see what Slack is all about:
 
