--- a/ref-other.Rmd
+++ b/ref-other.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "Other"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-rm(list=objects()) # start with a clean workspace
-source("knitr_setup.R")
+```{r child = "knitr_setup.Rmd"}
 ```
 
 # Helpful Tutorials
