--- a/ref-programming.Rmd
+++ b/ref-programming.Rmd
@@ -6,14 +6,12 @@ output:
     toc: no
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-rm(list=objects()) # start with a clean workspace
-source("knitr_setup.R")
+```{r child = "knitr_setup.Rmd"}
 ```
 
 # Programming in R
 
-- [Last semester's course website :)](https://emse6574-gwu.github.io/2019-Fall/)
+- [Programming for Analytics course website](https://p4a.seas.gwu.edu/2020-Fall/)
 - Grolemund, Garrett. "Hands-On Programming with R"
 [[free online](https://rstudio-education.github.io/hopr/)],
 [[buy on amazon](https://www.amazon.com/gp/product/1449359019/)]
