--- a/ref-rmarkdown.Rmd
+++ b/ref-rmarkdown.Rmd
@@ -1,11 +1,12 @@
 ---
 title: "R Markdown"
-output: html_document
+output:
+  html_document:
+    number_sections: false
+    toc: no
 ---
 
-```{r setup, echo=FALSE, message=FALSE, warning=FALSE}
-rm(list=objects()) # start with a clean workspace
-source("knitr_setup.R")
+```{r child = "knitr_setup.Rmd"}
 ```
 
 The most comprehensive resource on working with R Markdown is the [Definitive Guide](https://bookdown.org/yihui/rmarkdown/).
@@ -26,7 +27,4 @@ Finally, here are a few more links for help with specific issues / customization
 - [Pimp my RMD](https://holtzy.github.io/Pimp-my-rmd/): a guide for lots of cool features and customization options
 - [RStudio R Markdown documentation](http://rmarkdown.rstudio.com/)
 - [Producing html documents from `.R` scripts using `knitr::spin`](http://deanattali.com/2015/03/24/knitrs-best-hidden-gem-spin/)
-
-
-
-
+- [Advanced RMD tips and tricks](https://docs.google.com/presentation/d/e/2PACX-1vRo1eXJtiwo6aTA8KZ2E-bUbv2GOonC2RIVk_5eWQ5y-ADXbRamBhHaa3w1vMW6BkEPOMJ13ZahSo8Q/embed?start=false&loop=true&delayms=30000&slide=id.p)
