--- a/ref-course-software.Rmd
+++ b/ref-course-software.Rmd
@@ -11,11 +11,11 @@ output:
 
 This page lists all the software we'll be using in class.
 
-**You should install and set everything here _before_ the first day of class.**
+> You should install and set everything here _before_ the first day of class.
 
 First, install / setup these tools:
 
-- [Slack](https://emse-madd-f21.slack.com): you should have received an email with a sign up link. You can also find this link on the Blackboard announcement.
+- [Slack](https://emse-madd-f21.slack.com): You can find a sign up link on the announcement in Blackboard.
 - Install the Slack app on your phone and **Turn notifications on!**
 - Some tools we'll use will require that you be on the GW network. You can do that by installing the "Cisco AnyConnect VPN Client" software and loggin in to GW's VPN. Here's how to do that:
     - Install [Cisco AnyConnect VPN Client](https://my.gwu.edu/mod/downloads/?category=VPN)
@@ -33,5 +33,9 @@ Open this   | Not this!
 :----------:|:----------:
 ![](images/RStudio-Ball.png){ width=50 }  |  ![](images/Rlogo.png){ width=50 }
 </div>
+
+Finally, you'll need to install some R packages in RStudio that we will use throughout the semester. To do so, download [this zip file]()
+
+
 
 That's it - you're all set for class!
