--- a/ref-course-software.Rmd
+++ b/ref-course-software.Rmd
@@ -13,7 +13,7 @@ This page lists all the software we'll be using in class.
 
 > You should install and set everything here _before_ the first day of class.
 
-First, install / setup these tools:
+1. Install / setup these tools:
 
 - [Slack](https://emse-madd-f21.slack.com): You can find a sign up link on the announcement in Blackboard.
 - Install the Slack app on your phone and **Turn notifications on!**
@@ -21,7 +21,7 @@ First, install / setup these tools:
     - Install [Cisco AnyConnect VPN Client](https://my.gwu.edu/mod/downloads/?category=VPN)
     - Follow [these instructions](https://gwu-myit.onbmc.com/dwp/app/#/knowledge/KBA00002611/rkm) to log on to the VPN with your GW NetID
 
-Next, install the latest version of R and RStudio:
+2. Install the latest version of R and RStudio:
 
 - [Download and install R](https://cloud.r-project.org) (version 4.0.2 or higher)
 - [Download and install RStudio](https://rstudio.com/products/rstudio/download/) (Desktop version)
@@ -34,8 +34,6 @@ Open this   | Not this!
 ![](images/RStudio-Ball.png){ width=50 }  |  ![](images/Rlogo.png){ width=50 }
 </div>
 
-Finally, you'll need to install some R packages in RStudio that we will use throughout the semester. To do so, download [this zip file]()
-
-
+3. You'll need to install some R packages in RStudio that we will use throughout the semester. To do so, open RStudio then copy-paste [this file](https://raw.githubusercontent.com/emse-madd-gwu/2021-Fall/master/content/packages.R) into the console and press Return. This will install all the packages listed in the file.
 
 That's it - you're all set for class!
