--- a/_prerequisites.Rmd
+++ b/_prerequisites.Rmd
@@ -8,3 +8,5 @@ This course requires prior exposure to:
 Each of these concepts will be applied throughout the course, and no time will be spent reviewing the foundational elements of each concept.
 
 In addition, we will work in the [R programming language](https://www.r-project.org/) throughout the course, but no prior programming experience is required. We will spend the first three weeks going through exercises to get up to speed in R.
+
+Students are encouraged to complete [this self assessment](r0-self-assessment.html) prior to registering for the course to self-assess familiarity with these concepts.
