--- a/_prerequisites.Rmd
+++ b/_prerequisites.Rmd
@@ -9,4 +9,4 @@ Each of these concepts will be applied throughout the course, and no time will b
 
 In addition, we will work in the [R programming language](https://www.r-project.org/) throughout the course, but no prior programming experience is required. We will spend the first three weeks going through exercises to get up to speed in R.
 
-Students are encouraged to complete [this self assessment](r0-self-assessment.html) prior to registering for the course to self-assess familiarity with these concepts.
+Students are encouraged to complete [this self assessment](a0-self-assessment.html) prior to registering for the course to self-assess familiarity with these concepts.
