--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -85,9 +85,9 @@ There will be 5 quizzes given about once every two weeks immediately at the begi
 
 > **Why quiz at all?** Research shows that giving small quizzes throughout a class can dramatically help with *retention*. It's a phenomenon known as the "retrieval effect" - basically, you have to _practice_ remembering things, otherwise your brain won't remember them. The phenomenon and research on it is explained in detail in the book ["Make It Stick: The Science of Successful Learning,"](https://www.hup.harvard.edu/catalog.php?isbn=9780674729018) by Brown, Roediger, and McDaniel.
 
-## Reflections
+## Assignments
 
-Each week, students will be assigned specific readings to prepare for the next class period. Students will need to submit reflections on these readings each week, which may involve answering some practice questions. 
+Each week, students will be assigned readings and exercises to prepare for the next class period. Students will need to submit reflections on these readings each week, which may involve answering some practice questions.
 These are graded using a check system:
 
 - ✔+ (110%): Responses shows phenomenal thought and engagement with the course content. I will not assign these often.
